[gd_scene load_steps=4 format=4 uid="uid://bhaaw6p11pycu"]

[ext_resource type="Script" uid="uid://dt211syl8w20o" path="res://scenes/levels/SawmillDemon/SawmillDemon.gd" id="1_run2o"]
[ext_resource type="TileSet" uid="uid://bkacfi56tmg8i" path="res://tilesets/puzzle_tileset.tres" id="2_aj2rk"]
[ext_resource type="PackedScene" uid="uid://bx2syps2qmyxq" path="res://scenes/sprites/Demolitonist/Demolitonist.tscn" id="3_s1fln"]

[node name="SawmillDemon" type="Node2D"]
script = ExtResource("1_run2o")

[node name="Ground" type="TileMapLayer" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAD9//7/AAAaAAAAAAD9////AAAaAAEAAAD9/wAAAAAYAAEAAAD9/wEAAAAuAAoAAAD9/wIAAAAuAAsAAAD9/wMAAAAuAAoAAAD+//7/AAAbAAAAAAD+////AAAbAAEAAAD+/wAAAAAAAAMAAAD+/wEAAAAtAAoAAAD+/wIAAAAtAAsAAAD+/wMAAAAtAAoAAAD///7/AAAAAAMAAAD/////AAAAAAMAAAD//wAAAAAAAAMAAAD//wEAAAAuAAoAAAD//wIAAAAuAAsAAAD//wMAAAAuAAoAAAAAAP7/AAAcAAAAAAAAAP//AAAcAAEAAAAAAAAAAAAAAAMAAAAAAAEAAAAAAAMAAAAAAAIAAAAVAAAAAAAAAAMAAAAAAAMAAAABAP7/AAAdAAAAAAABAP//AAAdAAEAAAABAAAAAAAAAAMAAAABAAEAAAAUAAAAAAABAAIAAAAVAAAAAAABAAMAAAAWAAAAAAD+//3/AAAaAAEAAAD6//z/AAAAAAMAAAD6//3/AAAHAAAAAAD6//7/AAAHAAEAAAD6////AAAHAAEAAAD6/wAAAAAHAAEAAAD6/wEAAAAHAAIAAAD6/wIAAAACAAAAAAD6/wMAAAACAAEAAAD6/wQAAAACAAIAAAD6/wUAAAAAAAMAAAD7//z/AAAAAAMAAAD7//3/AAAAAAMAAAD7//7/AAAAAAMAAAD7////AAAAAAMAAAD7/wAAAAAAAAMAAAD7/wEAAAAAAAMAAAD7/wIAAAAAAAMAAAD7/wMAAAAAAAMAAAD7/wQAAAAAAAMAAAD7/wUAAAAAAAMAAAD8//z/AAAYAAAAAAD8//3/AAAYAAEAAAD8//7/AAAZAAAAAAD8////AAAZAAEAAAD8/wAAAAAAAAMAAAD8/wEAAAAtAAoAAAD8/wIAAAAtAAsAAAD8/wMAAAAAAAMAAAD8/wQAAAAAAAMAAAD8/wUAAAAAAAMAAAD9//z/AAAZAAAAAAD9//3/AAAZAAEAAAD9/wQAAAAtAAoAAAD9/wUAAAAKAAEAAAD+//z/AAAaAAAAAAD+/wQAAAAuAAoAAAD+/wUAAAAAAAMAAAD///z/AAAAAAMAAAD///3/AAAYAAEAAAD//wQAAAAAAAMAAAD//wUAAAAOAAEAAAAAAPz/AAAcAAAAAAAAAP3/AAAcAAEAAAAAAAQAAAAAAAMAAAAAAAUAAAAMAAIAAAABAPz/AAAdAAAAAAABAP3/AAAdAAEAAAABAAQAAAAAAAMAAAABAAUAAAAAAAMAAAACAPz/AAAeAAAAAAACAP3/AAAeAAEAAAACAP7/AAAeAAAAAAACAP//AAAeAAEAAAACAAAAAAAeAAEAAAACAAEAAAAVAAAAAAACAAIAAAAWAAAAAAACAAMAAAAVAAAAAAACAAQAAAAAAAMAAAACAAUAAAAAAAMAAAADAPz/AAAfAAAAAAADAP3/AAAfAAEAAAADAP7/AAAfAAAAAAADAP//AAAfAAEAAAADAAAAAAAAAAMAAAADAAEAAAAWAAAAAAADAAIAAAAXAAAAAAADAAMAAAAAAAMAAAADAAQAAAAAAAMAAAADAAUAAAAAAAMAAAAEAPz/AAAAAAMAAAAEAP3/AAAAAAMAAAAEAP7/AAAAAAMAAAAEAP//AAAAAAMAAAAEAAAAAAAAAAMAAAAEAAEAAAAAAAMAAAAEAAIAAAAAAAMAAAAEAAMAAAAAAAMAAAAEAAQAAAAAAAMAAAAEAAUAAAAAAAMAAAD6//v/AAACAAMAAAD7//v/AAAAAAMAAAD8//v/AAAAAAMAAAD9//v/AAAAAAMAAAD+//v/AAAAAAMAAAD///v/AAAAAAMAAAAAAPv/AAAAAAMAAAABAPv/AAAAAAMAAAACAPv/AAAAAAMAAAADAPv/AAAAAAMAAAAEAPv/AAAAAAMAAAAFAPv/AAAAAAMAAAAFAPz/AAAAAAMAAAAFAP3/AAAAAAMAAAAFAP7/AAAAAAMAAAAFAP//AAAAAAMAAAAFAAAAAAAKAAAAAAAFAAEAAAAKAAEAAAAFAAIAAAAKAAEAAAAFAAMAAAAKAAIAAAAFAAQAAAAAAAMAAAAFAAUAAAAAAAMAAAD6//r/AAAAAAMAAAD7//r/AAAIAAIAAAD8//r/AAAAAAMAAAD9//r/AAAAAAMAAAD+//r/AAAAAAMAAAD///r/AAAAAAMAAAAAAPr/AAAAAAMAAAABAPr/AAAAAAMAAAACAPr/AAAAAAMAAAADAPr/AAAAAAMAAAAEAPr/AAAAAAMAAAAFAPr/AAAAAAMAAAA=")
tile_set = ExtResource("2_aj2rk")

[node name="Floor" type="TileMapLayer" parent="."]
z_index = 1
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAP3/AAAdAAsAAAAAAP7/AAAdAAwAAAAAAP//AAAdAA0AAAABAP3/AAAeAAsAAAABAP7/AAAeAAwAAAABAP//AAAeAA0AAAACAP3/AAAfAAsAAAACAP7/AAAfAAwAAAACAP//AAAfAA0AAAAFAP//AAAGABEAAAAFAAAAAAAGABIAAAAEAAUAAAADABEAAAAFAAUAAAAEABEAAAD9//r/AAAEABMAAAD6//v/AAABAA8AAAD8//n/AAACAA4AAAD4//v/AAAAAA4AAAD5//z/AAABAA8AAAD7//r/AAAOAAkAAAA=")
tile_set = ExtResource("2_aj2rk")

[node name="Walls" type="TileMapLayer" parent="."]
z_index = 2
texture_filter = 1
tile_map_data = PackedByteArray("AAD7//z/AAAEAAcAAAD7//3/AAAEAAcAAAD7//7/AAAEAAcAAAD7////AAAEAAcAAAD7/wAAAAAFAAcAAAD7/wEAAAAEAAcAAAD7/wIAAAAEAAcAAAD7/wMAAAAEAAcAAAD7/wQAAAABAAgAAAAEAPz/AAAEAAkAAAAEAP3/AAAEAAkAAAAEAP7/AAAEAAkAAAAEAP//AAAEAAkAAAAEAAAAAAAHAAkAAAAEAAEAAAAEAAkAAAAEAAIAAAAEAAkAAAAEAAMAAAAEAAkAAAAEAAQAAAADAAgAAAD8//v/AAACAAkAAAD9//v/AAACAAkAAAD+//v/AAACAAkAAAD///v/AAACAAcAAAAAAPv/AAACAAkAAAABAPv/AAACAAkAAAACAPv/AAACAAkAAAADAPv/AAACAAkAAAD//wQAAAABAAkAAAAAAAQAAAACAAgAAAABAAQAAAACAAkAAAACAAQAAAACAAkAAAADAAQAAAACAAkAAAD8/wMAAAATAA4AAAD8//z/AAATAA4AAAADAPz/AAA5AAcAAAADAAMAAAA5AAcAAAD///z/AAAAAAgAAAD///3/AAAFAAoAAAD///7/AAAAAAYAAAD/////AAAAAAcAAAAAAAAAAAACAAYAAAAAAAEAAAAAAAgAAAAAAAIAAAAFAAoAAAAAAAMAAAAAAAYAAAABAAAAAAADAAkAAAACAAAAAAAEAAsAAAADAAAAAAABAAkAAAD//wAAAAACAAgAAAD+/wAAAAABAAkAAAD9/wAAAAAEAAsAAAD8/wAAAAADAAkAAAD7//v/AAAFAAYAAAAEAPv/AAAHAAgAAAD+/wEAAAAUABUAAAD//wEAAAAVABUAAAADAP3/AAAfABMAAAADAP7/AAAcABUAAAAAAPz/AAAPABUAAAABAPz/AAAQABUAAAADAP//AAAPABQAAAABAAEAAAAcABEAAAADAAEAAAAJABQAAAD8//3/AAAPAA4AAAD8//7/AAAOABQAAQD8////AAAaABMAAAD//wMAAAAMAA8AAAD8/wEAAAAKABMAAAD9/wQAAAADAAkAAAD8/wQAAAACAAkAAAD8/wIAAAAOABIAAAD+/wUAAAAQAAQAAAAAAAUAAAAIAAYAAAAAAPr/AAAFAA4AAAABAPr/AAAGAA8AAAACAPr/AAAGAA4AAAADAPr/AAAHAA4AAAAFAPv/AAACAA8AAAD6//r/AAABAA0AAAD7//n/AAABAA0AAAD5//n/AAACAA0AAAD5//v/AAABAA0AAAD6//v/AAACAA4AAAD7//r/AAADABQAAAA=")
tile_set = ExtResource("2_aj2rk")

[node name="Trails" type="TileMapLayer" parent="."]
z_index = 3
texture_filter = 1
tile_set = ExtResource("2_aj2rk")

[node name="Items" type="TileMapLayer" parent="."]
z_index = 3
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_aj2rk")

[node name="Demolitonist" parent="Items" instance=ExtResource("3_s1fln")]
z_index = 3
z_as_relative = false
position = Vector2(41, 45)

[node name="Trees" type="TileMapLayer" parent="."]
z_index = 4
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAD6/wUAAAA/AAsAAAAFAAUAAAA/AAoAAAAFAPr/AAA/AAkAAAD6//r/AAAAABAAAAAFAPv/AAA/AAcAAAAFAPz/AAA/AAcAAAAFAP3/AAA/AAcAAAAFAP7/AAA/AAcAAAAFAP//AAA/AAcAAAAFAAAAAAA/AAcAAAAFAAEAAAA/AAcAAAAFAAIAAAA/AAcAAAAFAAMAAAA/AAcAAAAFAAQAAAA/AAcAAAD6//z/AAA/AAUAAAD6//3/AAA/AAUAAAD6//7/AAA/AAUAAAD6////AAA/AAUAAAD6/wAAAAA/AAUAAAD6/wEAAAA/AAUAAAD6/wIAAAA/AAUAAAD6/wMAAAA/AAUAAAD6/wQAAAA/AAUAAAD7/wUAAAA/AAYAAAD8/wUAAAA/AAYAAAD9/wUAAAA/AAYAAAD+/wUAAAA/AAYAAAD//wUAAAA/AAYAAAAAAAUAAAA/AAYAAAABAAUAAAA/AAYAAAACAAUAAAA/AAYAAAADAAUAAAA/AAYAAAAEAAUAAAA/AAYAAAD9//r/AAA/AAQAAAD+//r/AAA/AAQAAAD///r/AAA/AAQAAAAAAPr/AAA/AAQAAAABAPr/AAA/AAQAAAACAPr/AAA/AAQAAAADAPr/AAA/AAQAAAAEAPr/AAA/AAQAAAD7//n/AAAAABMAAAD8//r/AAA/AAQAAAD5//n/AAAAABMAAAD5//v/AAAAABAAAAA=")
tile_set = ExtResource("2_aj2rk")

[node name="BadItems" type="TileMapLayer" parent="."]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAD+//7/AAAOABAAAAA=")
tile_set = ExtResource("2_aj2rk")

[node name="GoodItems" type="TileMapLayer" parent="."]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAD+//7/AAAOABAAAAA=")
tile_set = ExtResource("2_aj2rk")

[node name="MovingItems" type="TileMapLayer" parent="."]
modulate = Color(1, 0.392157, 0.392157, 0.392157)
z_index = 6
texture_filter = 1
tile_set = ExtResource("2_aj2rk")
